[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameEngine/Discard/Discard.gd" type="Script" id=1]
[ext_resource path="res://GameEngine/Discard/Discard.png" type="Texture" id=2]

[node name="Discard" type="Node2D"]
script = ExtResource( 1 )

[node name="Level0" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 2 )
hframes = 8

[node name="Level1" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
hframes = 8
frame = 3

[node name="Level2" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 6

